test/ui/tests/packages/unsupported-providers/git/package.stderr
error: dependency provider `git` is not supported yet
  --> ${DIRECTORY}/packages/unsupported-providers/git/package.metadata:12:37
   |
12 |             something: { provider: "git" },
   |                                     ^^^ 
   |

error: aborting due to previous error

