test/ui/tests/packages/unsupported-providers/git/package.metadata
# TEST fail check

name: "future",
version: "99.99.999",

components: [
    {
        type: "executable",
        path: "main.lushui",

        dependencies: {
            something: { provider: "git" },
        },
    }
],
